# libplist-cmake

./: CMakeLists.txt  README
modules/: FindLibPlist.cmake
